# tgbot

./: .black  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  app.py  pyproject.toml
handlers/: handlers.py
settings/: base_settings.py  prod_settings.py
