[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "telegram bot for downloading music from different source"
authors = ["Arinov Azamat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
aiogram = "^3.14.0"
asyncio = "^3.4.3"
mypy = "^1.13.0"
commitizen = "^3.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
